--- a/overallStyles.css
+++ b/overallStyles.css
@@ -16,7 +16,7 @@ html {
 	font-size: 15px;}
 
 body {
-	background: url("i.imgur.com/zXK4iTd.png") bottom;
+	background: url('https://i.imgur.com/81klnX0.png') bottom;
 	background-size: cover;
 	background-attachment: fixed;
 	position: absolute;
