--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /* Overall Files */
 @import url('cssFiles/variables.css');
-@import url('cssFiles/overallStyles.css');
+@import url('https://raw.githubusercontent.com/whogotdajuice/GG/main/overallStyles.css');
 @import url('cssFiles/header.css');
 @import url('cssFiles/footer.css');
 @import url('caticons.css');
