--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /* Overall Files */
 @import url('cssFiles/variables.css');
-@import url('https://raw.githubusercontent.com/whogotdajuice/GG/main/overallStyles.css');
+@import url('https://github.com/whogotdajuice/GG/blob/4c16a042b9ce3d28e7319eab78b622d51587a75e/overallStyles.css');
 @import url('cssFiles/header.css');
 @import url('cssFiles/footer.css');
 @import url('caticons.css');
